Tweaks, fixes and changes per latest PPT

--- a/app/modules/common/views/partials/confirmText.html
+++ b/app/modules/common/views/partials/confirmText.html
@@ -15,8 +15,8 @@
         </header>
           
        <!-- <button class="fin-app-btn fin-orange pull-left" ng-click="confirmDeleteGoal(currentGoal)">Continue</button> -->
-       <button class="fin-app-btn fin-orange pull-left" ng-click="confirm()">Confirm</button>
-       <button class="fin-app-btn fin-orange pull-right" ng-click="ngDialog.close()">Cancel</button>
+       <button class="fin-app-btn fin-white pull-left" ng-click="ngDialog.close()">Cancel</button>
+       <button class="fin-app-btn fin-orange pull-right" ng-click="confirm()">Confirm</button>
 
 </div>
        </div>
