--- a/app/modules/dashboard/views/dashboard.html
+++ b/app/modules/dashboard/views/dashboard.html
@@ -13,7 +13,7 @@
 					</div> -->
 				</div>
 				<h2>Risk Assessment</h2>
-				<!-- <p class="text-center desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
+				<p class="text-center desc">Your risk assessment based on a few simple questions helps us give you more customized advice.</p>
 				<h3 class="text-center">Your current risk score is</h3>
 				<p class="text-center score">{{risk_score}}</p>
 
@@ -29,8 +29,8 @@
 						<label><span></span></label>
 					</div> -->
 				</div>
-				<h2>Plan/Invest</h2>
-				<!-- <p class="text-center desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
+				<h2>Plan & Invest</h2>
+				<p class="text-center desc">Investments should be linked to financial goals. We help you plan for these goals scientifically.</p>
 				<!-- <h3 class="text-center" ng-if="!portfolio_flag">You currently have no planned</h3>
 				<h3 class="text-center" ng-if="portfolio_flag">You currently have planned</h3>
 				<p class="text-center score" ng-bind="dashCounts['investCount']"></p>
@@ -52,8 +52,8 @@
 						<img src="assets/images/dashboardImage4.png">
 					</div>
 				</div>
-				<h2>Track Performance</h2>
-				<!-- <p class="text-center desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
+				<h2>Track Investments</h2>
+				<p class="text-center desc">View the real time status of your actual or planned investments.</p>
 				<!-- <h3 class="text-center">Your financial goals are</h3>
 				<p class="text-center score text-score" ng-if="dashCounts['trackPerform']">on track</p>
 				<p class="text-center score text-score" ng-if="!dashCounts['trackPerform']">off track</p> -->
@@ -71,7 +71,7 @@
 					</div> -->
 				</div>
 				<h2>Withdraw</h2>
-				<!-- <p class="text-center desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> -->
+				<p class="text-center desc">Redeem your investments anytime anywhere with a few simple clicks.</p>
 				<!-- <h3 class="text-center">Your current risk score is</h3> -->
 <!-- 				<p class="text-center score">5.7</p>
 			<h4 class="text-center" ng-if="portfolio_flag">You havent started building<span class="nextline">your smart profile yet</span></h4> -->
