--- a/app/modules/registerinvestor/views/registerInvestorStarted.html
+++ b/app/modules/registerinvestor/views/registerInvestorStarted.html
@@ -51,7 +51,7 @@
                                     </div>
                                 </div>
                                 <p class="not-verified"><span class="content">Email Status</span><span ng-if="emailVerified" class="nextline highlight placeholder  addOnlyBold">VERIFIED</span>
-                                <span ng-if="!emailVerified" class="nextline not-verified placeholder  addOnlyBold">VERIFY NOW</span></p>
+                                <span ng-if="!emailVerified" click-redirect="/settings" class="nextline not-verified placeholder  addOnlyBold">VERIFY NOW</span></p>
                             </div>
                             <div class="checklist">
                                 <div class="checkedList">
@@ -60,7 +60,7 @@
                                     </div>
                                 </div>
                                 <p><span class="content">Phone Status</span><span ng-if="phoneVerified" class="nextline highlight placeholder addOnlyBold">VERIFIED</span>
-                                <span ng-if="!phoneVerified" class="nextline not-verified placeholder addOnlyBold">VERIFY NOW</span></p>
+                                <span ng-if="!phoneVerified" click-redirect="/settings" class="nextline not-verified placeholder addOnlyBold">VERIFY NOW</span></p>
                             </div>
                         </div>
                     </div>
@@ -72,7 +72,7 @@
                 <div class="fin-btn-cover started">
                     <div class="fin-btn-group">
                         <button ng-click="back()" class="fin-link-btn"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
-                        <button ng-disabled="quickInvestForm1.$invalid" class="fin-app-btn fin-orange" ng-click="saveProcessChoice()" click-redirect="/registerInvestorInfo">CONTINUE</button>
+                        <button ng-disabled="!phoneVerified || !emailVerified" class="fin-app-btn fin-orange" ng-click="saveProcessChoice()" click-redirect="/registerInvestorInfo">CONTINUE</button>
                     </div>
                 </div>
             </div>
