Fixed reset recommendations and back arrow in recommended schemes

--- a/app/modules/smartportfolio/views/compare.html
+++ b/app/modules/smartportfolio/views/compare.html
@@ -156,7 +156,7 @@
 		</div>
 	</div>
 	<div class="fin-btn-group addMargin">
-	    <button click-redirect="/educationStarted" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
+	    <button click-redirect="/recommendedSchemes" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
 	    <button ng-click="validateGoals(schemeList.scheme)" class="fin-app-btn fin-orange">SAVE AND CONTINUE</button>
 	</div>
 </section>
