--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -190,7 +190,7 @@
                 <form name="riskAssesment1Form3" novalidate>
                 <h2>My preference while investing would <span class="nextline">be to</span></h2>
                 <div class="radio-cover">
-                    <input type="radio" required id="option2Type1" name="option2" ng-model="modelVal.A9" value="op1"><label for="option2Type1"><span class="col-xs-2"></span>Take no risk, get fixed returns<span class = "nextline col-xs-10 no-padding">(Guaranteed return of 7% per annum)</span></label>
+                    <input type="radio" required id="option2Type1" name="option2" ng-model="modelVal.A9" value="op1"><label for="option2Type1"><span class="col-xs-2"></span>Take no risk, get fixed returns<div class = "nextline col-xs-10 no-padding">(Guaranteed return of 7% per annum)</div></label>
                     <input type="radio" required id="option2Type2" name="option2" ng-model="modelVal.A9" value="op2"><label for="option2Type2"><span class="col-xs-2"></span>Take low risk, get steady returns<div class = "nextline col-xs-10 no-padding">(Likely return of 10% with a chance of 5% loss)</div></label>
                     <input type="radio" required id="option2Type3" name="option2" ng-model="modelVal.A9" value="op3"><label for="option2Type3"><span class="col-xs-2"></span>Take moderate risk, get moderate returns<div class = "nextline col-xs-10 no-padding">(Likely return of 20% with a chance of 10% loss)</div></label>
                     <input type="radio" required id="option2Type4" name="option2" ng-model="modelVal.A9" value="op4"><label for="option2Type4"><span class="col-xs-2"></span>Take calculated risks, maximize returns<div class = "nextline col-xs-10 no-padding">(Likely return of 30% with a chance of 20% loss)</div></label>
