Fix liquid graph calculation. Change equity return percentage. Fix some navigation issues. Fix missing png

--- a/app/modules/smartportfolio/views/recommended.html
+++ b/app/modules/smartportfolio/views/recommended.html
@@ -122,8 +122,8 @@
 		</div>
 	</div>
 	<div class="fin-btn-group addMargin">
-	    <button click-redirect="/educationStarted" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
-	    <button click-redirect="/planInvest" class="fin-app-btn fin-blue">CONTINUE PLANING</button>
+	    <button click-redirect="{{$root.redirectURL}}" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
+	    <button click-redirect="/planInvest" class="fin-app-btn fin-blue">CONTINUE PLANNING</button>
 	    <button ng-click="goToInvest()" class="fin-app-btn fin-orange">INVEST AND PAY NOW</button>
 	</div>
 </section>
