--- a/app/modules/investwithdraw/views/reviewInvestment.html
+++ b/app/modules/investwithdraw/views/reviewInvestment.html
@@ -85,6 +85,6 @@
     </div>
 </div>
 <div class="fin-btn-group addMargin investStep1">
-    <button click-redirect="/educationStarted" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>CONTINUE PLANING</button>
+    <button click-redirect="/planInvest" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>CONTINUE PLANNING</button>
     <button ng-click="payInvest(overall_total_sum)" class="fin-app-btn fin-orange" ng-disabled="accepted_condn == false">PAY & INVEST</button>
 </div>
