--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -74,6 +74,9 @@ section{
               		line-height:40px;
               		float:left;
               		width:100%;
+				}
+				&.dashboardSubText{
+					.PIXEL2EM(20);
 				}	
 				&.text-score{
 					.PIXEL2EM(36); 
