--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -930,7 +930,7 @@
                 <div class="col-xs-12">
                     <div class="row">
                         <div class="gauge-result">
-                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="100%" class-name="guagePig"></info-tip></span>Equity/Debt Mix</p></div>
+                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="$root.toolTipEquiDebt" info-width="100%" class-name="guagePig"></info-tip></span>Equity/Debt Mix</p></div>
                             <div class="meter-widget-cover">
                                 <div class="col-xs-12 meter-header">
                                     <button class="edit" ng-click="callModel(modelVal.assetAllocation.debt, modelVal.assetAllocation.equity, modelVal.A5)"></button>
@@ -1162,7 +1162,7 @@
                 <div class="col-xs-12">
                     <div class="row">
                         <div class="gauge-result">
-                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="100%" class-name="guagePig"></info-tip></span>Equity/Debt Mix</p></div>
+                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="$root.toolTipEquiDebt" info-width="100%" class-name="guagePig"></info-tip></span>Equity/Debt Mix</p></div>
                             <div class="meter-widget-cover">
                                 <div class="col-xs-12 meter-header">
                                     <button class="edit" ng-click="callModel(modelVal.assetAllocation.debt, modelVal.assetAllocation.equity, modelVal.A4)"></button>
@@ -1230,7 +1230,7 @@
                             </div>
                         </div>
                         <div class="gauge-result">
-                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="100%" class-name="guagePig"></info-tip></span>Projected Investment Growth</p></div>
+                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="$root.toolTipProjInv" info-width="100%" class-name="guagePig"></info-tip></span>Projected Investment Growth</p></div>
                             <div class="meter-widget-cover">
                                 <div class="col-xs-12 graph-header">
                                     <div class="row">
@@ -1434,7 +1434,7 @@
                 <div class="col-xs-12">
                     <div class="row">
                         <div class="gauge-result">
-                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="100%" class-name="guagePig"></info-tip></span>Equity/Debt Mix</p></div>
+                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="$root.toolTipEquiDebt" info-width="100%" class-name="guagePig"></info-tip></span>Equity/Debt Mix</p></div>
                             <div class="meter-widget-cover">
                                 <div class="col-xs-12 meter-header">
                                     <button class="edit" ng-click="callModel(modelVal.assetAllocation.debt, modelVal.assetAllocation.equity, modelVal.A4)"></button>
@@ -1500,7 +1500,7 @@
                             </div>
                         </div>
                         <div class="gauge-result">
-                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="100%" class-name="guagePig"></info-tip></span>Projected Investment Growth</p></div>
+                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="$root.toolTipProjInv" info-width="100%" class-name="guagePig"></info-tip></span>Projected Investment Growth</p></div>
                             <div class="meter-widget-cover">
                                 <div class="col-xs-12 graph-header">
                                     <div class="row">
@@ -1665,7 +1665,7 @@
                 <div class="col-xs-12">
                     <div class="row">
                         <div class="gauge-result">
-                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="100%" class-name="guagePig"></span>Equity/Debt Mix</p></div>
+                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="$root.toolTipEquiDebt" info-width="100%" class-name="guagePig"></span>Equity/Debt Mix</p></div>
                             <div class="meter-widget-cover">
                                 <div class="col-xs-12 meter-header">
                                     <button class="edit" ng-click="callModel(modelVal.assetAllocation.debt, modelVal.assetAllocation.equity, modelVal.A4)"></button>
@@ -1731,7 +1731,7 @@
                             </div>
                         </div>
                         <div class="gauge-result">
-                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="100%" class-name="guagePig"></info-tip></span>Projected Investment Growth</p></div>
+                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="$root.toolTipProjInv" info-width="100%" class-name="guagePig"></info-tip></span>Projected Investment Growth</p></div>
                             <div class="meter-widget-cover">
                                 <div class="col-xs-12 graph-header">
                                     <div class="row">
@@ -1897,7 +1897,7 @@
                 <div class="col-xs-12">
                     <div class="row">
                         <div class="gauge-result">
-                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="100%" class-name="guagePig"></span>Equity/Debt Mix</p></div>
+                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="$root.toolTipEquiDebt" info-width="100%" class-name="guagePig"></span>Equity/Debt Mix</p></div>
                             <div class="meter-widget-cover">
                                 <div class="col-xs-12 meter-header">
                                     <button class="edit" ng-click="callModel(modelVal.assetAllocation.debt, modelVal.assetAllocation.equity, modelVal.A4)"></button>
@@ -1963,7 +1963,7 @@
                             </div>
                         </div>
                         <div class="gauge-result">
-                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="100%" class-name="guagePig"></info-tip></span>Projected Investment Growth</p></div>
+                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="$root.toolTipProjInv" info-width="100%" class-name="guagePig"></info-tip></span>Projected Investment Growth</p></div>
                             <div class="meter-widget-cover">
                                 <div class="col-xs-12 graph-header">
                                     <div class="row">
@@ -2128,7 +2128,7 @@
                 <div class="col-xs-12">
                     <div class="row">
                         <div class="gauge-result">
-                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="100%" class-name="guagePig"></span>Equity/Debt Mix</p></div>
+                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="$root.toolTipEquiDebt" info-width="100%" class-name="guagePig"></span>Equity/Debt Mix</p></div>
                             <div class="meter-widget-cover">
                                 <div class="col-xs-12 meter-header">
                                     <button class="edit" ng-click="callModel(modelVal.assetAllocation.debt, modelVal.assetAllocation.equity, modelVal.A4)"></button>
@@ -2194,7 +2194,7 @@
                             </div>
                         </div>
                         <div class="gauge-result">
-                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="100%" class-name="guagePig"></info-tip></span>Projected Investment Growth</p></div>
+                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="$root.toolTipProjInv" info-width="100%" class-name="guagePig"></info-tip></span>Projected Investment Growth</p></div>
                             <div class="meter-widget-cover">
                                 <div class="col-xs-12 graph-header">
                                     <div class="row">
@@ -2294,7 +2294,7 @@
                 <div class="col-xs-12">
                     <div class="row">
                         <div class="gauge-result">
-                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="100%" class-name="guagePig"></span>Equity/Debt Mix</p></div>
+                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="$root.toolTipEquiDebt" info-width="100%" class-name="guagePig"></span>Equity/Debt Mix</p></div>
                             <div class="meter-widget-cover">
                                 <div class="col-xs-12 meter-header">
                                     <button class="edit" ng-click="callModel(modelVal.assetAllocation.debt, modelVal.assetAllocation.equity, modelVal.A4)"></button>
@@ -2359,7 +2359,7 @@
                             </div>
                         </div>
                         <div class="gauge-result">
-                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="100%" class-name="guagePig"></info-tip></span>Projected Investment Growth</p></div>
+                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="$root.toolTipProjInv" info-width="100%" class-name="guagePig"></info-tip></span>Projected Investment Growth</p></div>
                             <div class="meter-widget-cover">
                                 <div class="col-xs-12 graph-header">
                                     <div class="row">
@@ -2522,7 +2522,7 @@
                 <div class="col-xs-12">
                     <div class="row">
                         <div class="gauge-result">
-                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="100%" class-name="guagePig"></span>Equity/Debt Mix</p></div>
+                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="$root.toolTipEquiDebt" info-width="100%" class-name="guagePig"></span>Equity/Debt Mix</p></div>
                             <div class="meter-widget-cover">
                                 <div class="col-xs-12 meter-header">
                                     <button class="edit" ng-click="callModel(modelVal.assetAllocation.debt, modelVal.assetAllocation.equity, modelVal.A4)"></button>
@@ -2589,7 +2589,7 @@
                             </div>
                         </div>
                         <div class="gauge-result">
-                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="100%" class-name="guagePig"></info-tip></span>Projected Investment Growth</p></div>
+                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="$root.toolTipProjInv" info-width="100%" class-name="guagePig"></info-tip></span>Projected Investment Growth</p></div>
                             <div class="meter-widget-cover">
                                 <div class="col-xs-12 graph-header">
                                     <div class="row">
