--- a/app/modules/goals/views/goal.html
+++ b/app/modules/goals/views/goal.html
@@ -103,6 +103,22 @@
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
 				<div class="goals-cover">
+				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['jewellery']">
+						<label><span ng-click="deleteGoal('jewellery')"></span></label>
+						
+					</div>
+					<div class="image-div" ng-click=startGoalAdd('jewellery')>
+						<img src="assets/images/jewellery.svg">
+					</div>
+					<div class="checkbox-cover" ng-if="$root.goalAnswered['jewellery']">
+						<input type="radio" name>
+						<label><span></span></label>
+					</div>
+				</div>
+				<h2>Jewellery</h2>
+			</div>
+			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
+				<div class="goals-cover">
 				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['event']">
 						<label><span ng-click="deleteGoal('event')"></span></label>
 						
@@ -116,22 +132,6 @@
 					</div>
 				</div>
 				<h2>Others</h2>
-			</div>
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover">
-				<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['jewellery']">
-						<label><span ng-click="deleteGoal('jewellery')"></span></label>
-						
-					</div>
-					<div class="image-div" ng-click=startGoalAdd('jewellery')>
-						<img src="assets/images/luxurious.png">
-					</div>
-					<div class="checkbox-cover" ng-if="$root.goalAnswered['jewellery']">
-						<input type="radio" name>
-						<label><span></span></label>
-					</div>
-				</div>
-				<h2>Jewellery</h2>
 			</div>
 		</div>	
 	</div>
