--- a/less/goals.less
+++ b/less/goals.less
@@ -60,6 +60,13 @@
 						}
 					}
 				}
+				&:nth-child(4){
+					.image-div{
+						img{
+							width:60%!important;
+						}
+					}
+				}
 			}
 	 	}		
 	 }
