--- a/app/modules/dashboard/views/dashboard.html
+++ b/app/modules/dashboard/views/dashboard.html
@@ -14,10 +14,15 @@
 				</div>
 				<h2>Risk Assessment</h2>
 				<p class="text-center desc">Your risk assessment based on a few simple questions helps us give you more customized advice.</p>
-				<h3 class="text-center">Your current risk score is</h3>
-				<p class="text-center score">{{risk_score}}</p>
+				<div ng-if="risk_score">
+					<h3 class="text-center">Your current risk score is</h3>
+					<p class="text-center score">{{risk_score}}</p>
+					<h4 class="text-center">{{riskType}} taker</h4>
+				</div>
 
-				<h4 class="text-center">{{riskType}} taker</h4>
+				<div ng-if="!risk_score">
+					<h4 class="text-center">You currently have no risk score</h4>
+				</div>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
 				<div class="goals-cover" click-redirect="/planInvest">
@@ -61,14 +66,14 @@
 				<!-- <h4 class="text-center" ng-if="user_flags.is_virtual">You don't have a smart portfolio yet</h4>
 				<h4 class="text-center" ng-if="!user_flags.is_virtual">You have a smart portfolio</h4> -->
 				<h4 class="text-center" ng-if="!user_flags.is_virtual">Track your</h4>
-				<p class="text-center score dashboardSubText" ng-if="!user_flags.is_virtual">CURRENT INVESTMENTS</p>
+				<p class="text-center score dashboardSubText no-margin" ng-if="!user_flags.is_virtual">CURRENT INVESTMENTS</p>
 				
 				<h4 class="text-center" ng-if="user_flags.is_virtual">Track how your</h4>
-				<p class="text-center score dashboardSubText" ng-if="user_flags.is_virtual">PLANNED GOALS</p>
+				<p class="text-center score dashboardSubText no-margin" ng-if="user_flags.is_virtual">PLANNED GOALS</p>
 				<h4 class="text-center" ng-if="user_flags.is_virtual">would grow if invested</h4>
 
 				<h4 class="text-center" ng-if="disabledTrackPerformance">You have</h4>
-				<p class="text-center score dashboardSubText" ng-if="disabledTrackPerformance">NO CURRENT INVESTMENTS OR PLANNED GOALS.</p>
+				<p class="text-center score dashboardSubText no-margin" ng-if="disabledTrackPerformance">NO CURRENT INVESTMENTS OR PLANNED GOALS.</p>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
 				<div class="goals-cover" ng-click="goToWithdraw()">
